# glfos-updater

./: flake.nix  meson.build  package.nix
data/: glfos-updater.desktop.in  glfos-updater.gresource.xml  meson.build  org.glfos.updater.in
data/icons/: meson.build
data/ui/: meson.build  welcome_dialog.blp  welcome_dialog_rolling.blp  welcome_dialog_stable.blp  welcome_dialog_start.blp  welcome_dialog_welcome.blp  window.blp
glfosupdater/: constants.py.in  glfosupdater.in  main.py  meson.build
glfosupdater/views/: main_window.py  meson.build  welcome_dialog.py
po/: POTFILES  en.po  fr.po  meson.build
